# llm-testkit

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_custom_connector.py  example_customer_support.py  example_redteam.py
llm_testkit/: __init__.py  cli.py  models.py
llm_testkit/assertions/: __init__.py  response.py
llm_testkit/checkers/: __init__.py  consistency.py  hallucination.py
llm_testkit/connectors/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
llm_testkit/redteam/: __init__.py  suite.py
llm_testkit/redteam/prompts/: adversarial.json
llm_testkit/reporter/: __init__.py  html.py
tests/: test_cli.py  test_connectors.py  test_core.py  test_redteam.py  test_reporter.py
