[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-testkit"
version = "0.1.1"
description = "Structured, repeatable testing for LLM outputs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Teny Peter", email = "tenypeter007@users.noreply.github.com" }
]
keywords = ["llm", "testing", "qa", "ai", "pytest", "hallucination", "red-teaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-html>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
hallucination = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
]
ollama = [
    "ollama>=0.1.0",
]
all = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "ollama>=0.1.0",
]

[project.scripts]
llm-testkit = "llm_testkit.cli:main"

[project.urls]
Homepage = "https://github.com/tenypeter007/llm-testkit"
Documentation = "https://github.com/tenypeter007/llm-testkit#readme"
Repository = "https://github.com/tenypeter007/llm-testkit"
Issues = "https://github.com/tenypeter007/llm-testkit/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
